Replace Guava with Caffeine and optimize cached value retrieval.
Exception based control flow is usually quite imperformant.